--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "typescript": "^5"
   },
   "dependencies": {
-    "@google/genai": "^1.42.0"
+    "@google/genai": "^1.42.0",
+    "@types/express": "^5.0.6",
+    "express": "^5.2.1"
   }
 }
