feat(memory): Implement memory management API with CRUD operations
- Add Delete Memory functionality with HTTP DELETE method.
- Create Fetch all memories endpoint to retrieve all memory files.
- Implement Get Memory endpoint to fetch a specific memory by ID.
- Add Update Memory functionality to modify existing memory files.
- Introduce List Memories endpoint to list all memories with optional filtering.
- Create memory database operations for managing memory files in the filesystem.
- Implement memory service layer to handle business logic for memory operations.
- Add memory types and request/response interfaces for type safety.
- Integrate embedding service for generating vector embeddings for memory content.
- Set up memory router to handle API routes for memory operations.

--- a/Bruno API/Chat with LLM.yml
+++ b/Bruno API/Chat with LLM.yml
@@ -10,8 +10,8 @@ http:
     type: json
     data: |-
       {
-        "conversation_id": "conv_1",
-          "message": "Soo i was thinking more about tech stuff , workspace is fully react native , ts , but the system is a mess js mixed with ts , no test cases. CMOpany is super fast moving with features shipped in days and broken in hours and fixed in seconds. Sooo I have a bond with the company for 2 years and I need to excel here : )"
+        "conversation_id": "conv_3",
+          "message": "Hey jarvis , anything to note or remeber before going back to Chennai?"
       }
   auth: inherit
 
