--- a/Bruno API/Fetch all memories.yml
+++ b/Bruno API/Fetch all memories.yml
@@ -1,15 +1,11 @@
 info:
-  name: Fetch Conversations
+  name: Fetch all memories
   type: http
   seq: 3
 
 http:
   method: GET
-  url: "{{dev}}/chat/:chat_id"
-  params:
-    - name: chat_id
-      value: conv_2
-      type: path
+  url: "{{dev}}/api/memory"
   auth: inherit
 
 settings:
