--- a/Bruno API/Get all memory of people.yml
+++ b/Bruno API/Get all memory of people.yml
@@ -1,15 +1,15 @@
 info:
-  name: Fetch Conversations
+  name: Get all memory of people
   type: http
-  seq: 3
+  seq: 5
 
 http:
   method: GET
-  url: "{{dev}}/chat/:chat_id"
+  url: "{{dev}}/api/memory?type=person"
   params:
-    - name: chat_id
-      value: conv_2
-      type: path
+    - name: type
+      value: person
+      type: query
   auth: inherit
 
 settings:
