--- a/Bruno API/Get memory by id.yml
+++ b/Bruno API/Get memory by id.yml
@@ -1,14 +1,14 @@
 info:
-  name: Fetch Conversations
+  name: Get memory by id
   type: http
-  seq: 3
+  seq: 7
 
 http:
   method: GET
-  url: "{{dev}}/chat/:chat_id"
+  url: "{{dev}}/api/memory/:user_id"
   params:
-    - name: chat_id
-      value: conv_2
+    - name: user_id
+      value: aleesa
       type: path
   auth: inherit
 
