--- a/Bruno API/MEMORY/Fetch all memories.yml
+++ b/Bruno API/MEMORY/Fetch all memories.yml
@@ -1,15 +1,11 @@
 info:
-  name: Get memory by id
+  name: Fetch all memories
   type: http
-  seq: 7
+  seq: 5
 
 http:
   method: GET
-  url: "{{dev}}/api/memory/:user_id"
-  params:
-    - name: user_id
-      value: aleesa
-      type: path
+  url: "{{dev}}/api/memory"
   auth: inherit
 
 settings:
