--- a/Bruno API/MEMORY/Get memory by id.yml
+++ b/Bruno API/MEMORY/Get memory by id.yml
@@ -1,11 +1,15 @@
 info:
-  name: Fetch all memories
+  name: Get memory by id
   type: http
-  seq: 3
+  seq: 6
 
 http:
   method: GET
-  url: "{{dev}}/api/memory"
+  url: "{{dev}}/api/memory/:user_id"
+  params:
+    - name: user_id
+      value: aleesa
+      type: path
   auth: inherit
 
 settings:
