--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
+    "init": "bun scripts/init-db.ts",
     "embed": "bun test.ts embed",
     "clean": "sqlite3 chat.db \"DELETE FROM messages; DELETE FROM session_state;\" && sqlite3 memory_index.db \"DELETE FROM embeddings;\""
   },
