feat: update chat_id in Fetch Conversations and add CORS support

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "@google/genai": "^1.42.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.6",
+    "cors": "^2.8.5",
     "express": "^5.2.1"
   }
 }
