--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/express": "^5.0.6",
     "cors": "^2.8.5",
     "express": "^5.2.1",
-    "firebase-admin": "^13.6.1"
+    "firebase-admin": "^13.6.1",
+    "rrule": "^2.8.1"
   }
 }
